BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Retargeting_BMS_CN__c.object
<CustomObject>
    <fields>
        <fullName>Januvia_Patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Januvia Patients - 捷诺维病人数</description>
        <label>Januvia Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Avg_ETV_ARV_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>3 Months Average ETV/ARV - ETV/ARV 3个月平均比例(%)</description>
        <label>3 Months Average ETV/ARV</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M3_Avg_HP_ETV_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>3 Months Average HP/ETV - HP/ETV 3个月平均比例(%)</description>
        <label>3 Months Average HP/ETV</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M3_Avg_Lamivudine_ARV_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>3 Months Average Lamivudine/ARV - Lamivudine/ARV 3个月平均比例(%)</description>
        <label>3 Months Average Lamivudine/ARV</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Main_Perscription_Habit_BMS_CN__c</fullName>
        <description>Perscription Habit - 主要处方习惯</description>
        <label>Main Perscription Habit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Anzatax_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Anzatax - 安素泰</description>
        <label>Monthly Anzatax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Brand_Prescription_BMS_CN__c</fullName>
        <formula>Monthly_Taxol_Prescription_BMS_CN__c + Taxotere_20mg_BMS_CN__c +  Gemzar_1g_BMS_CN__c  + Gemzar_200mg_BMS_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Brand Prescription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Carboplatin_Imitation_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Carboplatin Imitation</description>
        <label>Monthly Carboplatin Imitation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Cisplatin_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Cisplatin</description>
        <label>Monthly Cisplatin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Homemade_Docetaxel_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Homemade Docetaxel</description>
        <label>Monthly Homemade Docetaxel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Homemade_Paclitaxel_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Homemade Paclitaxel - 国产紫杉</description>
        <label>Monthly Homemade Paclitaxel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Liposome_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Liposome - 力朴素</description>
        <label>Monthly Liposome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Nedaplatin_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Nedaplatin</description>
        <label>Monthly Nedaplatin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Operations_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Operations - 月手术量</description>
        <label>Monthly Operations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Out_patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Out-patients - 月门诊量</description>
        <label>Monthly Out-patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Paclitaxel_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Paclitaxel - 白蛋白紫杉</description>
        <label>Monthly Paclitaxel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Paraplatin_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Paraplatin</description>
        <label>Monthly Paraplatin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Perscription_Amount_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Perscription Amount - 月处方金额</description>
        <label>Monthly Perscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Taxol_Prescription_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Taxol Prescription - 泰素月处方支数</description>
        <label>Monthly Taxol Prescription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Taxotere_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Taxotere</description>
        <label>Monthly Taxotere</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NIDDM_Patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>NIDDM Patients - 周二型糖尿病病人数</description>
        <label>NIDDM Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onco_Taxol_Product_BMS_CN__c</fullName>
        <description>Onco-Taxol Product List</description>
        <label>Onco-Taxol Product</label>
        <picklist>
            <picklistValues>
                <fullName>Taxol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraplatin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxol+Paraplatin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_BMS_CN__c</fullName>
        <description>Period(YYYY/MM)</description>
        <label>Period</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retargeting_Hospital_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Re-targeting Hospital</description>
        <label>Re-targeting Hospital</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Retargeting_Hospital_BMS_CN__c.Active_BMS_CN__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retargeting_Hospital_BMS_CN__c</referenceTo>
        <relationshipLabel>Re-targetings</relationshipLabel>
        <relationshipName>Next_Month_Hospital</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retargeting_Hospital_Original_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original Retargeting Hospital</description>
        <label>Re-targeting Hospital</label>
        <referenceTo>Retargeting_Hospital_BMS_CN__c</referenceTo>
        <relationshipLabel>Re-targetings (Retargeting Hospital)</relationshipLabel>
        <relationshipName>Re_targetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Glivec_Patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SD Glivec Patients - 标准剂量格列卫病人数</description>
        <label>SD Glivec Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_BMS_CN__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TG100_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TG100</description>
        <label>TG100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TG30_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TG30</description>
        <label>TG30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TJC_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TJC</description>
        <label>TJC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasigna_Patients_BMS_CN__c</fullName>
        <description>Tasigna Patients - 达希纳病人数</description>
        <label>Tasigna Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxotere_20mg_BMS_CN__c</fullName>
        <description>Taxotere 20mg - 泰索帝 20mg</description>
        <label>Taxotere 20mg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Title_BMS_CN__c</fullName>
        <description>Technical Title</description>
        <label>Technical Title</label>
        <picklist>
            <picklistValues>
                <fullName>E011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Title_Final_BMS_CN__c</fullName>
        <description>Final - Technical Title</description>
        <label>Technical Title</label>
        <picklist>
            <picklistValues>
                <fullName>E011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Title_Original_BMS_CN__c</fullName>
        <description>Original Technical Title</description>
        <label>Technical Title</label>
        <picklist>
            <picklistValues>
                <fullName>E011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Title_Verified_BMS_CN__c</fullName>
        <description>Verified Technical Title</description>
        <label>Technical Title</label>
        <picklist>
            <picklistValues>
                <fullName>E011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_BMS_CN__c</fullName>
        <description>Territory</description>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VB_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>VB</description>
        <label>VB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_HBV_Out_patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Weekly HBV Out-patients - 乙肝周门诊量</description>
        <label>Weekly HBV Out-patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Out_patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Weekly Out-patients - 周门诊量</description>
        <label>Weekly Out-patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Re-targeting</label>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Period_BMS_CN__c</columns>
        <columns>Doctor_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>BU_BMS_CN__c</columns>
        <columns>Territory_BMS_CN__c</columns>
        <columns>Inventiv_Check_BMS_CN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS_CN__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Active_BMS_CN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>已批准</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_BMS_CN</fullName>
        <columns>NAME</columns>
        <columns>Period_BMS_CN__c</columns>
        <columns>Doctor_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>BU_BMS_CN__c</columns>
        <columns>Territory_BMS_CN__c</columns>
        <columns>Inventiv_Check_BMS_CN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS_CN__c</field>
            <operation>equals</operation>
            <value>Submitted,Verified</value>
        </filters>
        <filters>
            <field>Active_BMS_CN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>待验证</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reject_BMS_CN</fullName>
        <columns>NAME</columns>
        <columns>Period_BMS_CN__c</columns>
        <columns>Doctor_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>BU_BMS_CN__c</columns>
        <columns>Territory_BMS_CN__c</columns>
        <columns>Inventiv_Check_BMS_CN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS_CN__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Active_BMS_CN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>已拒绝</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Target_In_Next_Cycle_BMS_CN</fullName>
        <columns>NAME</columns>
        <columns>Period_BMS_CN__c</columns>
        <columns>Doctor_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>BU_BMS_CN__c</columns>
        <columns>Territory_BMS_CN__c</columns>
        <columns>Inventiv_Check_BMS_CN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_BMS_CN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>下月目标医生</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RT{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Re-targetings</pluralLabel>
    <recordTypes>
        <fullName>Add_Retargeting_BMS_CN</fullName>
        <active>true</active>
        <description>Add Retargeting</description>
        <label>Add Retargeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Retargeting_Locked_BMS_CN</fullName>
        <active>true</active>
        <description>Add Retargeting - Locked</description>
        <label>Add Retargeting - Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Retargeting_Submitted_BMS_CN</fullName>
        <active>true</active>
        <description>Add Retargeting - Submitted</description>
        <label>Add Retargeting - Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Retargeting_Verified_BMS_CN</fullName>
        <active>true</active>
        <description>Add Retargeting - Verified</description>
        <label>Add Retargeting - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit_Retargeting_BMS_CN</fullName>
        <active>true</active>
        <description>Edit Retargeting</description>
        <label>Edit Retargeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit_Retargeting_Locked_BMS_CN</fullName>
        <active>true</active>
        <description>Edit Retargeting - Locked</description>
        <label>Edit Retargeting - Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit_Retargeting_Submitted</fullName>
        <active>true</active>
        <description>Edit Retargeting - Submitted</description>
        <label>Edit Retargeting - Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit_Retargeting_Verified</fullName>
        <active>true</active>
        <description>Edit Retargeting - Verified</description>
        <label>Edit Retargeting - Verified</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ETV_ARV_Plus_Lamivudine_ARV_BMS_CN</fullName>
        <active>true</active>
        <description>ETV/ARV＋Lamivudine/ARV &lt;= 100%.</description>
        <errorConditionFormula>OR((M3_Avg_ETV_ARV_BMS_CN__c + M3_Avg_Lamivudine_ARV_BMS_CN__c)&gt;1.0,(M3_Avg_ETV_ARV_BMS_CN__c + M3_Avg_Lamivudine_ARV_BMS_CN__c)&lt;0.0)</errorConditionFormula>
        <errorMessage>The value you input does not match ETV/ARV＋Lamivudine/ARV &lt;= 100%.</errorMessage>
    </validationRules>
</CustomObject>